# local-project-manager

./: CLAUDE.md  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
src/lpm/: __init__.py  app.py  config.py  git_utils.py  project.py  readme_manager.py  scanner.py
src/lpm/widgets/: __init__.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_git_utils.py  test_project.py  test_readme_manager.py  test_scanner.py
